--- a/src/main/resources/static/webContent/forum/portfolio.html
+++ b/src/main/resources/static/webContent/forum/portfolio.html
@@ -8,7 +8,7 @@
     <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
     <link rel="shortcut icon" href="webContent/forum/img/favicon.png">
 
-    <title>INNOVEA | BBS</title>
+    <title>INNOVAE | BBS</title>
 
     <!-- Bootstrap core CSS -->
     <link href="webContent/forum/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
     </style>
   </head>
 
-  <body>
+  <body onload="Onload()">
      <!--header start-->
     <header class="header-frontend">
         <div class="navbar navbar-default navbar-static-top">
@@ -173,9 +173,7 @@
                 </li> 
 
                 <li style="margin-right: 0px; margin-left: 250px;">
-<!--                     <div>
-                    <a class="fatie" href="#" style="color: #669900;">发帖</a>
-                  </div> -->
+
                   <div class="fatie" title="发帖">
                       <a href="publish.html"><img src="webContent/forum/img/post.png" style="width: 100%;height: 100%" onclick="#"></a>
                   </div>
@@ -249,9 +247,18 @@
                 <td>xxxxx</td>  
                 <td>666666</td>  
                 <td>2017/5/12</td>  
-              </tr> 
+              </tr>
 
-            </table>  
+              <tr>
+                  <td><SPAN title="杨志超-侯立-海日汗-赵姓学长谁的名字笔画最多"
+                            class=smallfont><STRONG><a href="#">杨志超-侯立-海日汗-赵姓学长谁的名字笔画最多</a></STRONG></SPAN></td>
+                  <td>xxxxx</td>
+                  <td>666666</td>
+                  <td>2017/5/12</td>
+              </tr>
+
+
+              </table>
               
  
             </div>
@@ -320,6 +327,7 @@
 
      <!--common script for all pages-->
     <script src="js/common-scripts.js"></script>
+    <script src="webContent/forum/js/forum_home.js"></script>
 
 
 
