--- a/src/main/resources/static/webContent/login/login.html
+++ b/src/main/resources/static/webContent/login/login.html
@@ -59,13 +59,14 @@
             </div>
         </div>
         <div class="page-container1" id="page-container1" style="display: none">
-            <form action="login1()" onsubmit="return check_reg()" method="post" class="form1">
-                <input type="text" id="reg_email" name="reg_email" class="email" placeholder="邮箱">
+            <form  method="post" action="account/register" onsubmit="return check_reg()" class="form1">
+                <input type="text" id="reg_name" name="name" class="email" placeholder="姓名">
+                <input type="text" id="reg_email" name="id" class="email" placeholder="邮箱">
                 <p class="error" id="reg_err"></p>
-                <input type="password" id="reg_password1" name="reg_password1" class="password" placeholder="密码">
+                <input type="password" id="reg_password1" name="password" class="password" placeholder="密码">
                 <input type="password" id="reg_password2" name="reg_password2" class="password" placeholder="确认密码">
                 <p class="error" id="reg_err1"></p>
-                <button type="submit" id="btn_reg" class="btn_login">注册</button>
+                <button type="submit" id="btn_reg" class="btn_reg">注册</button>
             </form>
         </div>
 
