--- a/src/main/resources/static/webContent/forum/portfolio.html
+++ b/src/main/resources/static/webContent/forum/portfolio.html
@@ -11,20 +11,20 @@
     <title>INNOVAE | BBS</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="webContent/forum/css/bootstrap.min.css" rel="stylesheet">
-    <link href="webContent/forum/css/theme.css" rel="stylesheet">
-    <link href="webContent/forum/css/bootstrap-reset.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/theme.css" rel="stylesheet">
+    <link href="css/bootstrap-reset.css" rel="stylesheet">
     <!--external css-->
-    <link href="webContent/forum/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <link href="webContent/forum/assets/fancybox/source/jquery.fancybox.css" rel="stylesheet" />
+    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="assets/fancybox/source/jquery.fancybox.css" rel="stylesheet" />
 
-    <link href="webContent/forum/css/superfish.css" rel="stylesheet">
-    <link href="webContent/forum/css/superfish-vertical.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="webContent/forum/css/Animate.css">
+    <link href="css/superfish.css" rel="stylesheet">
+    <link href="superfish-vertical.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/Animate.css">
 
     <!-- Custom styles for this template -->
-    <link href="webContent/forum/css/style.css" rel="stylesheet">
-    <link href="webContent/forum/css/style-responsive.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-responsive.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
@@ -32,10 +32,9 @@
       <script src="js/respond.min.js"></script>
     <![endif]-->
     <style type="text/css">
-      @font-face {font-family: 'Sensei'; src: url('webContent/forum/fonts/Sensei-Medium.ttf'),url('webContent/forum/fonts/Sensei-Medium.otf');}
-      @font-face {font-family: 'Jinglei'; src: url('webContent/forum/fonts/jinglei.ttf');}
-      @font-face {font-family: 'xiawucha'; src: url('webContent/forum/fonts/xiawucha.ttf');}
-      @font-face {font-family: 'fengya'; src: url('webContent/forum/fonts/FZFengYKSJ_Cu.TTF');}
+      @font-face {font-family: 'Sensei'; src: url('fonts/Sensei-Medium.ttf');}
+      @font-face {font-family: 'xiawucha'; src: url('fonts/xiawucha.ttf');}
+      @font-face {font-family: 'fengya'; src: url('fonts/FZFengYKSJ_Cu.TTF');}
     </style>
   </head>
 
@@ -183,92 +182,20 @@
             <!-- 论坛列表 -->
             <div style="border: solid 2px #f77b6f; border-radius: 5px; width: 100%;">
              <!-- 表头 -->  
-              <table class="liebiao">  
-                <thead>  
-                   <tr>  
-                    <th>标题</th>  
-                    <th>作者</th>  
-                    <th>评论数</th>  
-                    <th>最后更新时间</th>  
-                   </tr>  
-                </thead>  
-                <!-- 表格底部 -->  
-<!--               <tfoot>  
-                <tr>  
-                  <td> </td>  
-                  <td></td>  
-                  <td></td>  
-                  <td></td>  
-                </tr>  
-              </tfoot>   -->
-              
-              <tr>  
-                <td><SPAN title="闾光泽的体重？" class=smallfont><STRONG><a href="#">闾光泽的体重？</a></STRONG></SPAN></td>  
-                <td>闾光泽本人</td>  
-                <td>999999</td>  
-                <td>2017/5/12</td>  
-              </tr>     
-  
-              <tr>  
-                <td><SPAN title="任兴银的身高？"   
-            class=smallfont><STRONG><a href="#">任兴银的身高？</a></STRONG></SPAN></td>  
-                <td>任兴银本人</td>  
-                <td>999999</td>  
-                <td>2017/5/12</td>  
-              </tr>     
-  
-              <tr>  
-                <td><SPAN title="张志强的体重？？？"   
-            class=smallfont><STRONG><a href="#">张志强的体重？？？</a></STRONG></SPAN></td>  
-                <td>张志强本人</td>  
-                <td>100000000</td>  
-                <td>2017/5/12</td>  
-              </tr> 
-
-              <tr>  
-              <td><SPAN title="王瑷的头发长度？"   
-                  class=smallfont><STRONG><a href="#">王瑷的头发长度？</a></STRONG></SPAN></td>  
-                  <td>王瑷本人</td>  
-                  <td>666666</td>  
-                  <td>2017/5/12</td>  
-                </tr>     
-  
-              <tr>  
-                <td><SPAN title="预测帖：方君怡明天早上几点起？"   
-            class=smallfont><STRONG><a href="#">预测帖：方君怡明天早上几点起？</a></STRONG></SPAN></td>  
-                <td>方君怡</td>  
-                <td>0</td>  
-                <td>2017/5/12</td>  
-              </tr>     
-  
-              <tr>  
-                <td><SPAN title="杨志超-侯立-海日汗-赵姓学长谁的名字笔画最多"   
-            class=smallfont><STRONG><a href="#">杨志超-侯立-海日汗-赵姓学长谁的名字笔画最多</a></STRONG></SPAN></td>  
-                <td>xxxxx</td>  
-                <td>666666</td>  
-                <td>2017/5/12</td>  
-              </tr>
-
-              <tr>
-                  <td><SPAN title="杨志超-侯立-海日汗-赵姓学长谁的名字笔画最多"
-                            class=smallfont><STRONG><a href="#">杨志超-侯立-海日汗-赵姓学长谁的名字笔画最多</a></STRONG></SPAN></td>
-                  <td>xxxxx</td>
-                  <td>666666</td>
-                  <td>2017/5/12</td>
-              </tr>
-
-
+              <table class="liebiao">
               </table>
-              
- 
             </div>
+
+            <button onclick="nextPage()">下一页</button>
 
 
         </div>
         <!--portfolio end-->
     </div>
     <!--container end-->
-
+     <p id= "template" style="display: none;">
+         <tr><td><SPAN class=smallfont><STRONG><a href="#">$title$</a></STRONG></SPAN></td><td>$userName$</td><td>$commentsCount$</td><td>$time$</td></tr>
+     </p>
     <!--footer start-->
     <footer class="footer">
          <div class="container">
@@ -313,7 +240,7 @@
     <script type="text/javascript" src="js/hover-dropdown.js"></script>
 
     <script defer src="js/jquery.flexslider.js"></script>
-    <script type="text/javascript" src="webContent/forum/assets/bxslider/jquery.bxslider.js"></script>
+    <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js"></script>
 
 
     <script src="js/superfish.js"></script>
@@ -322,7 +249,7 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/link-hover.js"></script>
 
-    <script src="webContent/forum/assets/fancybox/source/jquery.fancybox.pack.js"></script>
+    <script src="assets/fancybox/source/jquery.fancybox.pack.js"></script>
 
 
      <!--common script for all pages-->
