--- a/src/main/resources/static/webContent/forum/publish.html
+++ b/src/main/resources/static/webContent/forum/publish.html
@@ -33,10 +33,10 @@
     <script src="js/respond.min.js"></script>
     <![endif]-->
     <style type="text/css">
-        @font-face {font-family: 'Sensei'; src: url('fonts/Sensei-Medium.ttf'),url('fonts/Sensei-Medium.otf');}
-        @font-face {font-family: 'Jinglei'; src: url('fonts/jinglei.ttf');}
-        @font-face {font-family: 'xiawucha'; src: url('fonts/xiawucha.ttf');}
-        @font-face {font-family: 'fengya'; src: url('fonts/FZFengYKSJ_Cu.TTF');}
+        @font-face {font-family: 'Sensei'; src: url('../../fonts/Sensei-Medium.ttf'),url('../../fonts/Sensei-Medium.otf');}
+        @font-face {font-family: 'Jinglei'; src: url('../../fonts/jinglei.ttf');}
+        @font-face {font-family: 'xiawucha'; src: url('../../fonts/xiawucha.ttf');}
+        @font-face {font-family: 'fengya'; src: url('../../fonts/FZFengYKSJ_Cu.TTF');}
     </style>
 </head>
 
